tests/fail/semantic/invalid_product_type.cyt
rule [a: int] -> nothing

// args: --no-colour

// expected stderr:
// error: type `int` cannot be used in a reactant list
//   ┌─ ../tests/fail/semantic/invalid_product_type.cyt:1:10
//   │
// 1 │ rule [a: int] -> nothing
//   │          ^^^ this type cannot be used as a reactant